SUBDIRS = src

DISTCLEANFILES = src/Makefile.in \
                 src/textloader/Makefile.in \
                 Makefile.in \
                 aclocal.m4 \
                 config.h.in \
                 configure \
                 compile \
                 INSTALL \
                 install-sh \
                 depcomp \
                 COPYING \
                 missing

distclean-local:
	-rm -rf autom4te.cache
