SUBDIRS = src

DISTCLEANFILES = src/Makefile.in \
                 src/textloader/Makefile.in \
                 src/library/Makefile.in \
                 src/libraryinstaller/Makefile.in \
                 src/unshield/Makefile.in \
                 Makefile.in \
                 aclocal.m4 \
                 config.h.in \
                 configure \
                 compile \
                 INSTALL \
                 install-sh \
                 depcomp \
                 COPYING \
                 missing

distclean-local:
	-rm -rf autom4te.cache
