AM_CPPFLAGS = -Imd5
## create this library
noinst_LIBRARIES = libunshield.a

## use these sources
libunshield_a_SOURCES = \
	md5/md5c.c \
	md5/global.h \
	md5/md5.h \
	bswap.c \
	component.c \
	directory.c \
	file.c \
	file_group.c \
	helper.c \
	internal.h \
	libunshield.h libunshield.c \
	log.h log.c \
	cabfile.h
